--- a/backend/Backend/appsettings.template.json
+++ b/backend/Backend/appsettings.template.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=esg_platform;Username=myappuser;Password=selby"
+    "DefaultConnection": "Host=${DB_HOST:-localhost};Database=${DB_NAME:-esg_platform};Username=${DB_USER:-your_username};Password=${DB_PASSWORD:-your_password}"
   },
   "Logging": {
     "LogLevel": {
